syntax = "proto3";
package comdex.incentives.v1beta1;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/comdex-official/comdex/x/incentives/types";

message LiquidtyGaugeMetaData {
  uint64 pool_id = 1;
  bool is_master_pool = 2;
  repeated uint64 child_pool_ids = 3;
  google.protobuf.Timestamp start_time = 4 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"start_time\""
  ];
  google.protobuf.Duration lock_duration = 5 [
    (gogoproto.nullable) = false,
    (gogoproto.stdduration) = true,
    (gogoproto.jsontag) = "lock_duration,omitempty",
    (gogoproto.moretags) = "yaml:\"lock_duration\""
  ];
}

message Gauge {
    uint64 id = 1;
    string from = 2 [ 
        (gogoproto.moretags) = "yaml:\"from\"" 
    ];
    google.protobuf.Timestamp created_at = 3 [
      (gogoproto.stdtime) = true,
      (gogoproto.nullable) = false,
      (gogoproto.moretags) = "yaml:\"created_at\""
    ];
    uint64 gauge_type_id = 4;
    google.protobuf.Duration trigger_duration = 5 [
      (gogoproto.nullable) = false,
      (gogoproto.stdduration) = true,
      (gogoproto.jsontag) = "trigger_duration,omitempty",
      (gogoproto.moretags) = "yaml:\"trigger_duration\""
    ];
    cosmos.base.v1beta1.Coin deposit_amount = 6 [
        (gogoproto.nullable) = false,
        (gogoproto.casttype)  = "github.com/cosmos/cosmos-sdk/types.Coin"
    ];
    uint64 total_triggers = 7;
    uint64 triggered_count = 8;
    cosmos.base.v1beta1.Coin distributed_amount = 9 [
        (gogoproto.nullable) = false,
        (gogoproto.casttype)  = "github.com/cosmos/cosmos-sdk/types.Coin"
    ];
    bool is_active = 10;
    oneof kind {
      LiquidtyGaugeMetaData liquidity_meta_data = 11;
    }
}

message GaugeByTriggerDuration {
    google.protobuf.Duration trigger_duration = 1 [
      (gogoproto.nullable) = false,
      (gogoproto.stdduration) = true,
      (gogoproto.jsontag) = "trigger_duration,omitempty",
      (gogoproto.moretags) = "yaml:\"trigger_duration\""
    ];
    repeated uint64 gauge_ids = 2;
}