syntax = "proto3";
package comdex.incentives.v1beta1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "comdex/incentives/v1beta1/params.proto";
import "comdex/incentives/v1beta1/gauge.proto";
import "comdex/incentives/v1beta1/epochs.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/comdex-official/comdex/x/incentives/types";
option (gogoproto.equal_all)           = false;
option (gogoproto.goproto_getters_all) = false;

// PARAMS
message QueryParamsRequest {}
message QueryParamsResponse {
  Params params = 1 [(gogoproto.nullable) = false];
}


// ALL EPOCHES
message QueryAllEpochsInfoRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}
message QueryAllEpochsInfoResponse {
  repeated EpochInfo epochs = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"epochs\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

// EPOCH BY DURATION
message QueryEpochInfoByDurationRequest {
  uint64 duration_seconds = 1;
}
message QueryEpochInfoByDurationResponse {
  EpochInfo epoch = 1
      [ (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"epoch\"" ];
}

// ALL GAUGES
message QueryAllGaugesRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}
message QueryAllGaugesResponse {
  repeated Gauge gauges = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"gauges\""
  ];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

service Query {
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/comdex/incentives/v1beta1/params";
  }
  rpc QueryAllEpochsInfo(QueryAllEpochsInfoRequest) returns (QueryAllEpochsInfoResponse) {
    option (google.api.http).get = "/comdex/incentives/v1beta1/epochs";
  }
  rpc QueryEpochInfoByDuration(QueryEpochInfoByDurationRequest) returns (QueryEpochInfoByDurationResponse) {
    option (google.api.http).get = "/comdex/incentives/v1beta1/epoch_duration/{duration_seconds}";
  }
  rpc QueryAllGauges(QueryAllGaugesRequest) returns (QueryAllGaugesResponse) {
    option (google.api.http).get = "/comdex/incentives/v1beta1/gauges";
  }
}